# Aalenian

./: .gitignore  Aalenian.sln  CMakeLists.txt  GameCreationKit.sln  LICENSE  README.md
AalTest/: AalTest.vcxproj  AalTest.vcxproj.filters  CMakeLists.txt
AalTest/source/: AalTest.h
AalTest/source/AalTest/: API.h  Asserts.cpp  Asserts.h  Exceptions.cpp  Exceptions.h  FailedTestException.cpp  FailedTestException.h  ParameterizedTest.h  SimpleTest.h  SkipTestException.cpp  SkipTestException.h  Stringify.cpp  Stringify.h  TestBase.h  TestResult.h  TestRunner.cpp  TestRunner.h  TestRunnerNullOutput.h  TestRunnerOutputBase.h  TestRunnerWindowsConsoleOutput.cpp  TestRunnerWindowsConsoleOutput.h  TestSuite.cpp  TestSuite.h  TestSuiteResult.h  ValueMismatchTestException.cpp  ValueMismatchTestException.h
CMake/: AalTest.cmake
Compiler/: CMakeLists.txt  Compiler.vcxproj  Compiler.vcxproj.filters  cpp.hint
Compiler/include/Compiler/: Compiler.h  CompilerApi.h  Diagnostic.h  (+17 more)
Compiler/source/: Compiler.cpp  Defines.h  Diagnostic.cpp  DiagnosticsBag.cpp  File.cpp  Lexer.cpp  LexerResult.cpp  Node.cpp  ParseTree.cpp  ParseTreePrinter.cpp  Parser.cpp  SourceLineAndColumns.cpp  SourceLocation.cpp  SourceText.cpp  Token.cpp  TokenBuffer.cpp  TokenKind.cpp  TypeDefs.h
CompilerTests/: CompilerTests.vcxproj
DebugTools/: DebugTools.qrc  DebugTools.ui  DebugTools.vcxproj  DebugTools.vcxproj.filters
DebugTools/source/: DebugTools.cpp  TokenListView.cpp  TokenListView.h  main.cpp
GameCreationKit/: GameCreationKit.qrc  GameCreationKit.ui  GameCreationKit.vcxproj  GameCreationKit.vcxproj.filters
GameCreationKit/source/: GameCreationKit.cpp  TokenListView.cpp  main.cpp
TestFramework/: TestFramework.vcxproj  TestFramework.vcxproj.filters
TestFramework/source/: TestFramework.cpp  TestFramework.h
Tests/AalTestTests/: AalTestTests.vcxproj  AalTestTests.vcxproj.filters  CMakeLists.txt
Tests/AalTestTests/source/: AalTestTests.cpp  AalTestTests.h  main.cpp
Tests/AllInOne/: AllInOne.vcxproj  AllInOne.vcxproj.filters  CMakeLists.txt
Tests/AllInOne/source/: main.cpp
Tests/LexerTests/: CMakeLists.txt  LexerTests.vcxproj  LexerTests.vcxproj.filters
Tests/ParserTests/: CMakeLists.txt  ParserTests.vcxproj  ParserTests.vcxproj.filters
Tests/SourceLineAndColumnsTests/: SourceLineAndColumnsTests.vcxproj
Tests/SourceLocationTests/: CMakeLists.txt  SourceLocationTests.vcxproj  SourceLocationTests.vcxproj.filters
Tests/TypeCheckerTests/: CMakeLists.txt  TypeCheckerTests.vcxproj  TypeCheckerTests.vcxproj.filters
Tests/VirtualMachineTests/: CMakeLists.txt  VirtualMachineTests.vcxproj  VirtualMachineTests.vcxproj.filters
(+492 files in other folders)
